test/loop/confidence/errors/verify_error_8.loop
# Dupes

class Star ->
  name

class Star ->
  age

main ->
  true
